# SPL3.1

Client/: .makefile.kate-swp  commands  makefile
Client/include/: connectionHandler.h
Client/src/: .MovieClient.cpp.kate-swp  MovieClient.cpp  connectionHandler.cpp
ClientClion/: CMakeLists.txt  makefile
ClientClion/src/: MovieClient.cpp  connectionHandler.cpp  echoClient.cpp
MyNetwork1/: myFile.json  pom.xml
MyNetwork1/src/main/java/: LPClient.java  code.java  code1.java
MyNetwork2/: pom.xml
MyNetwork2/src/main/java/: LPServer.java
Server/: pom.xml
Server/Database/: Movies.json  Movies.json.orig  Movies1.json  Users.json  Users1.json
Server/src/main/java/bgu/spl181/net/api/bidi/: Connections.java
Server/src/main/java/bgu/spl181/net/impl/: CommandEncoderDecoder.java  EchoClient.java  Movie.java  MovieDatabase.java  MovieUser.java  RentalServiceSection.java  RentalServiceSection.java.orig
Server/src/main/java/bgu/spl181/net/movierental/: Command.java  CommandEncoderDecoder.java  Database.java  Movie.java  MovieDatabase.java  MovieRentalProtocol.java  MovieUser.java  TPCMain.java  USTBP.java  User.java
Server/src/main/java/bgu/spl181/net/srv/: BaseServer.java  BlockingConnectionHandler.java  ConnectionsImpl.java  NonBlockingConnectionHandler.java  Reactor.java  Server.java  TPCConnections.java  TPCMain.java
Server/src/test/resources/Basic_Addmovie_Test/Client0/: Client0_testResults
tests/2-gal/: MainTester.java  TestingConnections.java  TestingServerSimulator.java
tests/4-moshe/: EchoClient.java
(+38 files in other folders)
